--- a/contact.html
+++ b/contact.html
@@ -6,11 +6,11 @@
 
 	<title>Bootstrap-Portfolio</title>
 
-	<link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+	<link rel="stylesheet" type="text/css" href="Assets/css/reset.css">
 <!-- 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"> -->
-<link rel="stylesheet" type="text/css" href="assets/css/bootstrap.css">
-	<link rel="stylesheet" type="text/css" href="assets/css/style.css">
-  <link rel="stylesheet" type="text/css" href="assets/css/style_3.css">
+<link rel="stylesheet" type="text/css" href="Assets/css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="Assets/css/style.css">
+  <link rel="stylesheet" type="text/css" href="Assets/css/style_3.css">
 
 </head>
 <body>
