fix links to images

--- a/contact.html
+++ b/contact.html
@@ -76,17 +76,17 @@
              <ul class="sidebar_nav">
                 <li>
                   <a href="https://github.com/killianmh">
-                    <img id="github_icon" src="assets/images/github.svg" alt="github link">
+                    <img id="github_icon" src="Assets/images/github.svg" alt="github link">
                   </a>
                 </li>
                 <li id="sidebar_middle_icon">
                   <a  href="https://linkedin.com/in/killianmatthew">
-                    <img src="assets/images/linkedin.svg" alt="linkedin link">
+                    <img src="Assets/images/linkedin.svg" alt="linkedin link">
                   </a>
                 </li>
                 <li>
                   <a href="https://stackoverflow.com/users/8805002/binarysolo">
-                    <img id="stack_icon" src="assets/images/stack_overflow.svg" alt="github link">
+                    <img id="stack_icon" src="Assets/images/stack_overflow.svg" alt="github link">
                   </a>
                 </li>
               </ul>
