--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
                 <div class="col-md-6">
                   <div class="thumbnail">
                     <a href="#" >
-                      <img src="assets/images/subway.jpg" alt="..." style="width: 100%">
+                      <img src="Assets/images/subway.jpg" alt="..." style="width: 100%">
                       <div class="caption img_label">
                         Hangman
                       </div>
@@ -70,7 +70,7 @@
                 <div class="col-md-6">
                   <div class="thumbnail">
                     <a href="#" >
-                      <img src="assets/images/subway.jpg" alt="..." style="width: 100%">
+                      <img src="Assets/images/subway.jpg" alt="..." style="width: 100%">
                       <div class="caption img_label">
                         RPG Game
                       </div>
@@ -84,7 +84,7 @@
                 <div class="col-md-6">
                   <div class="thumbnail">
                     <a href="#" >
-                      <img src="assets/images/subway.jpg" alt="..." style="width: 100%">
+                      <img src="Assets/images/subway.jpg" alt="..." style="width: 100%">
                       <div class="caption img_label">
                         Trivia Game
                       </div>
@@ -95,7 +95,7 @@
                 <div class="col-md-6">
                   <div class="thumbnail">
                     <a href="#" >
-                      <img src="assets/images/subway.jpg" alt="..." style="width: 100%">
+                      <img src="Assets/images/subway.jpg" alt="..." style="width: 100%">
                       <div class="caption img_label">
                         Rutgers Info Widget
                       </div>
@@ -109,7 +109,7 @@
                 <div class="col-md-6">
                   <div class="thumbnail">
                     <a href="#" >
-                      <img src="assets/images/subway.jpg" alt="..." style="width: 100%">
+                      <img src="Assets/images/subway.jpg" alt="..." style="width: 100%">
                       <div class="caption img_label">
                         Rock Paper Scissors
                       </div>
