--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			         <div class="row space_below">
 				        <div class="col-md-4 col-sm-5 col-xs-12">
                   <div class="thumbnail profile_pic">
-					         <img src="assets/images/profile.jpg" class="img-responsive" alt="...">
+					         <img src="Assets/images/profile.jpg" class="img-responsive" alt="...">
                   </div>
                 </div>
                 <div class="col-md-8 col-sm-7 col-xs-12">
@@ -81,17 +81,17 @@
              <ul class="sidebar_nav">
                 <li>
                   <a href="https://github.com/killianmh">
-                    <img id="github_icon" src="assets/images/github.svg" alt="github link">
+                    <img id="github_icon" src="Assets/images/github.svg" alt="github link">
                   </a>
                 </li>
                 <li id="sidebar_middle_icon">
                   <a  href="https://linkedin.com/in/killianmatthew">
-                    <img src="assets/images/linkedin.svg" alt="linkedin link">
+                    <img src="Assets/images/linkedin.svg" alt="linkedin link">
                   </a>
                 </li>
                 <li>
                   <a href="https://stackoverflow.com/users/8805002/binarysolo">
-                    <img id="stack_icon" src="assets/images/stack_overflow.svg" alt="github link">
+                    <img id="stack_icon" src="Assets/images/stack_overflow.svg" alt="github link">
                   </a>
                 </li>
               </ul>
