--- a/portfolio.html
+++ b/portfolio.html
@@ -58,8 +58,8 @@
                 
                 <div class="col-md-6">
                   <div class="thumbnail">
-                    <a href="#" >
-                      <img src="Assets/images/subway.jpg" alt="..." style="width: 100%">
+                    <a href="https://killianmh.github.io/Hangman-Game/" >
+                      <img src="Assets/images/hangman.jpg" alt="..." style="width: 100%">
                       <div class="caption img_label">
                         Hangman
                       </div>
