--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
                 <div class="col-md-6">
                   <div class="thumbnail">
                     <a href="https://killianmh.github.io/Hangman-Game/" >
-                      <img src="Assets/images/hangman.jpg" alt="..." style="width: 100%">
+                      <img src="Assets/images/hangman.PNG" alt="..." style="width: 100%">
                       <div class="caption img_label">
                         Hangman
                       </div>
